LIME-129 Adapt checkpassport and issuecredential lambdas to use common-lib services.